--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/dirtandgrass/page-fetcher#readme",
   "dependencies": {
-    "axios": "^1.6.7"
+    "axios": "^1.6.7",
+    "readline": "^1.3.0"
   }
 }
